plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    apply plugin: 'java-library'

    group = 'com.congress'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'

        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
        annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"

        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // swagger
        implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // s3

        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    }

    test {
        useJUnitPlatform()
    }
}

bootJar {
    enabled = false
}
jar {
    enabled = true
}
